Update Class Project - Deliverable 4 - HTML - HTML File - Nami Huyen Tram.html

--- a/Class Project - Deliverable 4 - HTML - HTML File - Nami Huyen Tram.html
+++ b/Class Project - Deliverable 4 - HTML - HTML File - Nami Huyen Tram.html
@@ -20,8 +20,9 @@
 </form>
 
 <center>
-<button type="submit" onclick="alert('You have checked in. Thank you and enjoy!')"> Submit </button>
-</center>
+<p id="demo" style="display:none">You have checked in. Thank you and enjoy!</p>
+<button type="button" onclick="document.getElementById('demo').style.display='block'">Submit</button>
+</center>  
 
 </body>
 
